--- a/ChatPrjTest/pom.xml
+++ b/ChatPrjTest/pom.xml
@@ -65,6 +65,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>com.hyong.chatprj.test</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
